fix: .header__nav_shown class only added when header expanded and removed otherwise; remove unnecessary z-index from .header_expanded

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -21,7 +21,6 @@
 
 .header_expanded {
   position: relative;
-  z-index: 0;
 }
 
 .header_expanded::after {
